# gaia-markdown

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md
data/: CMakeLists.txt
data/css/: CMakeLists.txt  solarized-dark.css
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
src/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  gaia.cpp  gaia.desktop  gaia.h  gaiaSettings.kcfg  gaiaSettings.kcfgc  gaiaViewBase.ui  gaiaui.rc  gaiaview.cpp  gaiaview.h  main.cpp  markdown.h  settingsBase.ui  settingsCSS.ui  settingsEditor.ui
src/theme/: CMakeLists.txt  csstheme.cpp  csstheme.h  cssthemeprovider.cpp  cssthemeprovider.h
tests/: a.cpp  a.h
